--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.28",
+    "angular-4-data-table": "^0.1.3",
+    "angular2-text-mask": "^8.0.3",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "ng2-smart-table": "^1.2.1",
     "ngx-bootstrap": "^1.8.0",
     "rxjs": "^5.4.1",
     "tether": "^1.4.0",
