--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "ng2-charts": "^1.6.0",
     "ng2-smart-table": "^1.2.1",
     "ngx-bootstrap": "^1.8.0",
     "rxjs": "^5.4.1",
