--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.3.5",
-    "@angular/common": "^4.3.5",
-    "@angular/compiler": "^4.3.5",
-    "@angular/core": "^4.3.5",
-    "@angular/forms": "^4.3.5",
-    "@angular/http": "^4.3.5",
-    "@angular/platform-browser": "^4.3.5",
-    "@angular/platform-browser-dynamic": "^4.3.5",
-    "@angular/router": "^4.3.5",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.1",
+    "@angular/animations": "^4.3.6",
+    "@angular/common": "^4.3.6",
+    "@angular/compiler": "^4.3.6",
+    "@angular/core": "^4.3.6",
+    "@angular/forms": "^4.3.6",
+    "@angular/http": "^4.3.6",
+    "@angular/platform-browser": "^4.3.6",
+    "@angular/platform-browser-dynamic": "^4.3.6",
+    "@angular/router": "^4.3.6",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.2",
     "angular-4-data-table": "^0.1.4",
     "angular2-text-mask": "^8.0.3",
     "bootstrap": "^4.0.0-beta",
@@ -31,20 +31,20 @@
     "ng2-charts": "^1.6.0",
     "ng2-dragula": "^1.5.0",
     "ng2-smart-table": "^1.2.1",
-    "ngx-bootstrap": "^1.8.1",
-    "popper.js": "^1.12.2",
+    "ngx-bootstrap": "^1.9.1",
+    "popper.js": "^1.12.3",
     "rxjs": "^5.4.3",
     "tether": "^1.4.0",
-    "zone.js": "^0.8.16"
+    "zone.js": "^0.8.17"
   },
   "devDependencies": {
     "@angular/cli": "1.2.4",
-    "@angular/compiler-cli": "^4.3.5",
-    "@angular/language-service": "^4.3.5",
-    "@types/jasmine": "~2.5.53",
+    "@angular/compiler-cli": "^4.3.6",
+    "@angular/language-service": "^4.3.6",
+    "@types/jasmine": "^2.5.54",
     "@types/jasminewd2": "~2.0.2",
-    "@types/jquery": "^3.2.11",
-    "@types/node": "^6.0.87",
+    "@types/jquery": "^3.2.12",
+    "@types/node": "^6.0.88",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
